// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PreviewContainer renders desktop container 1`] = `
<div
  className="PreviewContainer"
  data-id="preview-desktop"
>
  <div
    className="PreviewScreen notranslate"
  >
    <div>
      Example
    </div>
  </div>
</div>
`;

exports[`PreviewContainer renders mobile container 1`] = `
<div
  className="PreviewMobileContainer notranslate"
  data-id="preview-mobile-phone"
>
  <div
    className="PreviewMobilePhone"
  >
    <div
      className="PreviewMobilePhoneScreen"
    >
      <div>
        Example
      </div>
    </div>
  </div>
</div>
`;
